crates/lmpdf-sys/tests/ui/unknown_attribute.stderr
error: unknown attribute `version`, expected `since`
 --> tests/ui/unknown_attribute.rs:2:7
  |
2 |     #[version(7543)]
  |       ^^^^^^^
