crates/lmpdf-sys/tests/ui/unknown_attribute.rs
lmpdf_sys_macros::pdfium_ffi! {
    #[version(7543)]
    fn Foo();
}

fn main() {}
